--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.material_version = '1.2.0-alpha05'
+    ext.gson_version = '2.8.6'
+    ext.volley_version = '1.1.1'
     
     repositories {
         google()
